[project]
name = "computer"
version = "0.1.0"
requires-python = ">=3.14"
description = "CLI computer tool"
dependencies = [
    "ollama>=0.6.1",
    "openai>=2.15.0",
    "rich>=14.3.3",
    "sympy>=1.14.0",
]

[project.scripts]
computer = "app.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]